Fixed contact form on Safari browser, deployed to production

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -12,7 +12,7 @@ label {
   font-weight: 100;
 }
 
-input, textarea, input:-internal-autofill-selected {
+.custom-control {
   color: white;
   background-color: #262626;
   border: none;
@@ -26,14 +26,6 @@ a {
   &:hover {
     color: #FFC700;
   }
-}
-
-.title {
-  font-size: 72px;
-  font-weight: 100;
-  line-height: 1;
-  border-bottom: 1px solid #FFC700;
-  display: inline-block;
 }
 
 .btn-primary {
